# isitA.com

./: .env.example  .gitignore  .pre-commit-config.yaml   Dockerfile  Makefile  README.md  backup  docker-compose.yaml  langgraph.json  main.py  pyproject.toml  requirements-airflow.txt
airflow/: docker-compose.yaml
airflow/config/: airflow.cfg
airflow/dags/: bias_detection_dag.py  crawl4ai_ingestion_dag.py  nlp_processing_dag.py  rss_news_ingestion.py  rss_news_ingestion_dag.py  topic_clustering_dag.py
app/agent/: graph.py  state.py
app/api/routes/: __init__.py  chat.py  health.py
app/core/: app_state.py  auth.py  config.py  constants.py  database.py  langfuse.py  logging.py  memory.py  rate_limiter.py
app/models/: __init__.py
app/schemas/: __init__.py  app_state.py
app/utils/: util.py
migrations/: env.py
migrations/versions/: 159e066b4055_creating_collections_and_embedding_.py
